--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <ul id="vimeo-4-stars-list" class="links"></ul>
     
     
-    <script src="scripts.js"></script>
+    <script type="module" src="scripts.js"></script>
 </body>
 </html>
