--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <ul id="vimeo-no-stars-list" class="links"></ul>
     
  
-    
+    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
 
 
     <script src="scripts.js"></script>
