--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
     <ul id="vimeo-no-stars-list" class="links"></ul>
     
  
-    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+    <iframe src="https://player.vimeo.com/video/24315784?h=0b7aec2e8f" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/24315784">The Crooked Frame</a> from <a href="https://vimeo.com/jacksabbath">Jack Sabbath</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+
+
+
+
 
 
     <script src="scripts.js"></script>
